name:                git-timeline
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/git-timeline#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Leon
maintainer:          ml@matthewleon.com
copyright:           2017 Matthew Leon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable git-timeline
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Git.Command
                     , Git.Log
                     , Git.Types.SHA
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , base16-bytestring
                     , bytestring
                     , safe-exceptions
                     , turtle
                     , brick
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matthewleon/git-timeline
